@@ -1,0 +1,18 @@
+/*
+  file-name-map.hh -- declare map_file_name()
+
+  source file of the GNU LilyPond music typesetter
+
+  (c) 2005 Han-Wen Nienhuys <hanwen@xs4all.nl>
+
+*/
+
+#ifndef FILE_NAME_MAP_HH
+#define FILE_NAME_MAP_HH
+
+#include "string.hh"
+
+String map_file_name (String s);
+
+#endif /* FILE_NAME_MAP_HH */
+
